updated comments and fixed container alignment

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -1,8 +1,15 @@
+#tweet-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 article {
   border: #55524d solid 5px;
   margin: 1em;
   width: 100%;
-  padding: 0 1em 0 1em; 
+  padding: 0 1em 0 1em;
 }
 
 article:hover {
